Review Request 9681 - fix for not showing values in IE because of JS error - fix for tabs being misaligned to the right in IE

--- a/le-ui/projects/common/components/datacloud/analysistabs/analysistabs.component.scss
+++ b/le-ui/projects/common/components/datacloud/analysistabs/analysistabs.component.scss
@@ -11,6 +11,7 @@
         @include flex-container;
         @include flex-item(1 1 auto);
         border-left: 1px solid #d0d1d0;
+        width: 100%;
         max-width: 1200px;
         margin: 0 auto;
         & > li {
